Switch Publisher from Single Queue to Request and Response Queues